scrollbar fix try3

--- a/css/style.css
+++ b/css/style.css
@@ -18,13 +18,13 @@ body{
 	overflow-x: hidden;*/
 }
 
-/*body::-webkit-scrollbar{
+body::-webkit-scrollbar{
 	display: none !important;
 	width: 0;
 	height: 0;
 	background: transparent !important;
 	-webkit-appearance: none !important;
-}*/
+}
 
 
 h1,h2,h3,h4,h5,h6{
